[package]
name = "thirtyfour_query"
version = "0.4.1"
authors = ["Steve Pryde <steve@stevepryde.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Advanced element query interface for the thirtyfour crate"
homepage = "https://github.com/stevepryde/thirtyfour_query"
repository = "https://github.com/stevepryde/thirtyfour_query"
documentation = "https://docs.rs/thirtyfour_query"

readme = "README.md"
keywords = ["selenium", "webdriver", "chromedriver", "geckodriver", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]


[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded", "io-util", "time"] }
thirtyfour = "0.18.0"
async-trait = "0.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
stringmatch = "0.2"

[dev-dependencies]
regex = "1"
color-eyre = "0.5.6"
